--- a/src/components/sections/OpenStatus.astro
+++ b/src/components/sections/OpenStatus.astro
@@ -78,6 +78,10 @@ const storeStatus = getStoreStatus() as OpenStatusProps["storeStatus"];
   <Button
     text={storeStatus}
     href="/#contact"
-    class="flex justify-center font-bold text-sm min-[520px]:text-md min-[580px]:text-xl tracking-tighter min-[450px]:tracking-normal text-[#FFC66D] text-outline sm:-mt-2"
+    onClick={() =>
+      document
+        .getElementById("contact")
+        ?.scrollIntoView({ behavior: "smooth" })}
+    class="flex justify-center font-bold text-sm min-[520px]:text-lg min-[520px]:-mt-0.5 min-[575px]:-mt-1 min-[580px]:text-xl min-[600px]:-mt-0.5 sm:-mt-1 text-[#FFC66D] text-outline"
   />
 </div>
