--- a/src/components/sections/Staff.astro
+++ b/src/components/sections/Staff.astro
@@ -16,12 +16,12 @@ const defaultStaffList = getStaffList();
     class="absolute z-[-2] inset-0 w-full h-full object-cover"
   />
   <h3
-    class="inline-block p-6 font-bold text-4xl tracking-widest bg-[#7F0201] bg-opacity-80 text-white text-outline-white rounded-3xl"
+    class="inline-block p-4 md:p-6 font-bold text-4xl tracking-widest bg-[#7F0201] bg-opacity-80 text-white text-outline-white rounded-3xl"
     style={{ backdropFilter: "blur(35px)" }}
   >
     Meet Our Pack
   </h3>
-  <div class="flex justify-center py-5">
+  <div class="flex justify-center py-3 md:py-5">
     <StaffCarousel staffList={defaultStaffList} client:visible />
   </div>
 </section>
