--- a/src/components/ui/BlogPostCard.astro
+++ b/src/components/ui/BlogPostCard.astro
@@ -4,32 +4,27 @@ import type { CollectionEntry } from "astro:content";
 
 const { post }: { post?: CollectionEntry<"blog"> } = Astro.props;
 
-const plainTextBody = post ? markdownToTxt(post.body) : "";
-const plainTextTitle = post ? markdownToTxt(post.data.title) : "";
-
-const limitedPlainTextBody =
-  plainTextBody.split(" ").slice(0, 50).join(" ") +
-  (plainTextBody.split(" ").length > 50 ? "..." : "");
+const postTitle = post ? post.data.title : "";
+const postDescription = post ? post.data.description : "";
 ---
 
-<section class="flex my-auto ml-4 px-2 drop-shadow-2xl">
+<section class="flex my-auto ml-5 px-1 drop-shadow-2xl">
   <div
-    class="relative w-[350px] h-[200px] flex pt-8 rounded-3xl bg-[#FFC66D] bg-opacity-50"
+    class="relative w-[320px] h-[210px] sm:w-[410px] sm:h-[180px] md:w-[500px] md:h-[150px] flex pt-6 pb-3 rounded-3xl bg-[#FFC66D] bg-opacity-50"
     style={{ backdropFilter: "blur(35px)" }}
+    onclick="window.location.href = `/blog/${post?.slug}/`"
   >
-    <div class="absolute top-5 -left-8">
+    <div class="absolute top-5 -left-8 md:top-2">
       <img
         src="https://placehold.co/350x350/png"
         alt="Blog tag photo"
-        class="w-[110px] h-auto rounded-2xl"
+        class="w-[100px] md:w-[120px] h-auto rounded-2xl"
       />
     </div>
-    <div class="ml-20 px-2">
-      <a href={`/blog/${post?.slug}/`} class="font-bold">{plainTextTitle}</a>{
-        " "
-      }
-      <p class="py-2">
-        {limitedPlainTextBody}
+    <div class="ml-16 md:ml-20 px-4">
+      <a href={`/blog/${post?.slug}/`} class="font-bold">{postTitle}</a>
+      <p class="max-h-[100%] py-2">
+        {postDescription}
       </p>
     </div>
   </div>
