--- a/src/components/sections/Blog.astro
+++ b/src/components/sections/Blog.astro
@@ -30,7 +30,7 @@ const recentPosts = uniquePosts.slice(0, 3);
   </h3>
 
   <div
-    class="flex flex-col xl:flex-row xl:mx-24 justify-center items-center py-6 space-y-4"
+    class="grid grid-cols-1 place-items-center gap-4 xl:flex-row xl:mx-24 justify-center items-center py-6"
   >
     {recentPosts.map((post) => <BlogPostCard post={post} key={post.slug} />)}
   </div>
