--- a/src/components/sections/OpenStatus.astro
+++ b/src/components/sections/OpenStatus.astro
@@ -82,6 +82,6 @@ const storeStatus = getStoreStatus() as OpenStatusProps["storeStatus"];
       document
         .getElementById("contact")
         ?.scrollIntoView({ behavior: "smooth" })}
-    class="flex justify-center font-bold text-sm min-[520px]:text-lg min-[520px]:-mt-0.5 min-[575px]:-mt-1 min-[580px]:text-xl min-[600px]:-mt-0.5 sm:-mt-1 text-[#FFC66D] text-outline"
+    class="flex justify-center font-bold tracking-tighter sm:tracking-tight md:tracking-base text-sm min-[520px]:text-lg min-[520px]:-mt-0.5 min-[575px]:-mt-1 min-[580px]:text-xl min-[600px]:-mt-0.5 sm:-mt-1 text-[#FFC66D] text-outline"
   />
 </div>
