--- a/src/components/sections/Contact.astro
+++ b/src/components/sections/Contact.astro
@@ -26,22 +26,33 @@ const convertTo12Hour = (time24: string) => {
 
 <section
   id="contact"
-  class="flex-row-reverse md:flex md:flex-1 justify-center pt-20 md:pt-6 md:px-6 xl:px-32 2xl:px-64 bg-[#FFC66D] min-h-[750px]"
+  class="flex-row-reverse md:flex md:flex-1 justify-center pt-20 md:pt-6 md:px-6 xl:px-32 2xl:px-64 bg-[#FFC66D] min-h-[750px] z-[-10]"
 >
-  <div class="flex-1 text-center my-auto">
-    <h3 class="font-bold text-3xl pb-3 tracking-widest">Store Hours</h3>
-    {
-      Object.entries(storeHours).map(([day, hours]) => (
-        <div class="flex text-xl justify-center">
-          {day}: {convertTo12Hour(hours.open)} to {convertTo12Hour(hours.close)}
-        </div>
-      ))
-    }
+  <div class="relative flex-1 text-center my-auto">
+    <div class="relative mx-auto">
+      <img
+        src="/src/assets/stump.png"
+        alt="Stump sign"
+        class="absolute left-14 -top-10 w-[430px] h-auto object-contain z-0 drop-shadow-2xl"
+      />
 
-    <h3 class="font-bold text-3xl pt-10 tracking-widest">
+      <div class="relative z-20 text-center text-white">
+        <h3 class="font-bold text-3xl pb-3 tracking-widest">Store Hours</h3>
+        {
+          Object.entries(storeHours).map(([day, hours]) => (
+            <div class="flex text-xl justify-center">
+              {day}: {convertTo12Hour(hours.open)} to{" "}
+              {convertTo12Hour(hours.close)}
+            </div>
+          ))
+        }
+      </div>
+    </div>
+
+    <h3 class="font-bold text-3xl pt-20 tracking-widest">
       Have Any Questions?
     </h3>
-    <div class="flex flex-1 text-3xl pt-4 md:pt-8 pb-10 md-pb-0 justify-center">
+    <div class="flex flex-1 text-3xl pt-4 pb-10 md-pb-0 justify-center">
       <button
         id="openModal"
         class="bg-[#7F0201] hover:bg-[#A52A2A] text-white font-bold py-2 px-4 rounded-xl"
