--- a/src/components/sections/Staff.astro
+++ b/src/components/sections/Staff.astro
@@ -1,9 +1,9 @@
 ---
 import StaffCarousel from "../ui/StaffCarousel.tsx";
 
-import { getStaffList } from "../../constants/StoreInfo.astro";
+import { officialStaffList } from "../../constants/StoreInfo.astro";
 
-const defaultStaffList = getStaffList();
+const defaultStaffList = officialStaffList();
 ---
 
 <section
