--- a/src/constants/StoreInfo.astro
+++ b/src/constants/StoreInfo.astro
@@ -10,13 +10,14 @@ interface StoreHours {
 }
 
 interface StaffProps {
+  id: number;
   name: string;
   role: string;
   bio: string;
   imageSrc: string;
 }
 
-export const getStoreInfo = () => {
+export const officialStoreInfo = () => {
   let storeInfo: StoreInfo = {
     name: "PT Pet Supply",
     address: "86 Worcester Rd, Webster",
@@ -26,7 +27,7 @@ export const getStoreInfo = () => {
   return storeInfo;
 };
 
-export const getStoreHours = () => {
+export const officialStoreHours = () => {
   let storeHours: StoreHours = {
     Monday: { open: "09:00", close: "18:00" },
     Tuesday: { open: "09:00", close: "18:00" },
@@ -40,51 +41,59 @@ export const getStoreHours = () => {
   return storeHours;
 };
 
-export const getStaffList = () => {
+export const officialStaffList = () => {
   let staffList: StaffProps[] = [
     {
+      id: 1,
       name: "Yolanda DeGaetano",
       role: "Owner",
       bio: "Lorem ipsum odor amet, consectetuer adipiscing elit. Facilisi purus sagittis eros quam dui commodo egestas ac. Hendrerit placerat donec tincidunt mollis fusce diam pharetra. Vitae tempus orci amet vitae a elit quam dictumst? Risus blandit potenti tortor consectetur pretium vivamus.",
       imageSrc: "https://placehold.co/600x400",
     },
     {
+      id: 2,
       name: "Carlos Martinez",
       role: "Sales Manager",
       bio: "Lorem ipsum odor amet, consectetuer adipiscing elit. Facilisi purus sagittis eros quam dui commodo egestas ac. Hendrerit placerat donec tincidunt mollis fusce diam pharetra. Vitae tempus orci amet vitae a elit quam dictumst? Risus blandit potenti tortor consectetur pretium vivamus.",
       imageSrc: "https://placehold.co/600x400",
     },
     {
+      id: 3,
       name: "Sarah Thompson",
       role: "Lead Designer",
       bio: "Lorem ipsum odor amet, consectetuer adipiscing elit. Facilisi purus sagittis eros quam dui commodo egestas ac. Hendrerit placerat donec tincidunt mollis fusce diam pharetra. Vitae tempus orci amet vitae a elit quam dictumst? Risus blandit potenti tortor consectetur pretium vivamus.",
       imageSrc: "https://placehold.co/600x400",
     },
     {
+      id: 4,
       name: "Alex Ramirez",
       role: "Developer",
       bio: "Lorem ipsum odor amet, consectetuer adipiscing elit. Facilisi purus sagittis eros quam dui commodo egestas ac. Hendrerit placerat donec tincidunt mollis fusce diam pharetra. Vitae tempus orci amet vitae a elit quam dictumst? Risus blandit potenti tortor consectetur pretium vivamus.",
       imageSrc: "https://placehold.co/600x400",
     },
     {
+      id: 5,
       name: "Mia Jenkins",
       role: "Customer Support",
       bio: "Lorem ipsum odor amet, consectetuer adipiscing elit. Facilisi purus sagittis eros quam dui commodo egestas ac. Hendrerit placerat donec tincidunt mollis fusce diam pharetra. Vitae tempus orci amet vitae a elit quam dictumst? Risus blandit potenti tortor consectetur pretium vivamus.",
       imageSrc: "https://placehold.co/600x400",
     },
     {
+      id: 6,
       name: "Laura Patel",
       role: "Marketing Specialist",
       bio: "Lorem ipsum odor amet, consectetuer adipiscing elit. Facilisi purus sagittis eros quam dui commodo egestas ac. Hendrerit placerat donec tincidunt mollis fusce diam pharetra. Vitae tempus orci amet vitae a elit quam dictumst? Risus blandit potenti tortor consectetur pretium vivamus.",
       imageSrc: "https://placehold.co/600x400",
     },
     {
+      id: 7,
       name: "Ethan Brooks",
       role: "Developer",
       bio: "Lorem ipsum odor amet, consectetuer adipiscing elit. Facilisi purus sagittis eros quam dui commodo egestas ac. Hendrerit placerat donec tincidunt mollis fusce diam pharetra. Vitae tempus orci amet vitae a elit quam dictumst? Risus blandit potenti tortor consectetur pretium vivamus.",
       imageSrc: "https://placehold.co/600x400",
     },
     {
+      id: 8,
       name: "Olivia Carter",
       role: "Graphic Designer",
       bio: "Lorem ipsum odor amet, consectetuer adipiscing elit. Facilisi purus sagittis eros quam dui commodo egestas ac. Hendrerit placerat donec tincidunt mollis fusce diam pharetra. Vitae tempus orci amet vitae a elit quam dictumst? Risus blandit potenti tortor consectetur pretium vivamus.",
